# HelixVisualizer

./: .gitignore  README.md  main.py  pyproject.toml
assets/: duuri_molli_long.mid  example_notes.json  simple_scale.mid
configs/: ui_profile.json
docs/: cli-testing.md
src/helix_viz/: __init__.py  audio_devices.py  audio_processor.py  configuration.py  guitar_profiles.py  helix_math.py  main.py  midi_file.py  note_io.py  note_timeline.py  offline_renderer.py  pattern_memory.py  pitch_helix_visualizer.py  visualizer_base.py
src/helix_viz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audio_devices.py  test_audio_processor_filters.py  test_cli.py  test_helix_math.py  test_midi_file.py  test_note_io.py  test_offline_renderer.py  test_pattern_memory.py  test_pitch_helix_visualizer_memory_fill.py  test_timeline_multisource.py
