[project]
name = "helix-viz"
version = "0.1.0"
description = "Standalone guitar pitch helix visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "PyQt5>=5.15.0",
  "pyqtgraph>=0.13.0",
  "PyOpenGL>=3.1.7",
  "sounddevice>=0.5.2",
  "librosa>=0.11.0",
]

[project.scripts]
helix-viz = "helix_viz.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
